--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -12,22 +12,22 @@ pipeline {
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t $REGISTRY_URL/$DOCKER_IMAGE:latest .'
+                bat 'docker build -t $REGISTRY_URL/$DOCKER_IMAGE:latest .'
             }
         }
         stage('Scan Docker Image') {
             steps {
-                sh 'sh scanners/trivy-scan.sh $REGISTRY_URL/$DOCKER_IMAGE:latest'
+                bat 'sh scanners/trivy-scan.sh $REGISTRY_URL/$DOCKER_IMAGE:latest'
             }
         }
         stage('Push Docker Image') {
             steps {
-                sh 'docker push $REGISTRY_URL/$DOCKER_IMAGE:latest'
+                bat 'docker push $REGISTRY_URL/$DOCKER_IMAGE:latest'
             }
         }
         stage('Deploy to Kubernetes') {
             steps {
-                sh 'kubectl apply -f k8s/deployment.yaml'
+                bat 'kubectl apply -f k8s/deployment.yaml'
             }
         }
     }
