--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -1,44 +1,51 @@
 pipeline {
     agent any
-    environment {
-        DOCKER_IMAGE = 'container-security-image' // Name of the Docker image
-        REGISTRY_URL = 'docker.io/pranav224'      // Docker Hub registry URL
-    }
     stages {
         stage('Checkout') {
             steps {
-                git url: 'https://github.com/Pranav8722/container-security.git'
+                // Clone the repository
+                git url: 'https://github.com/Pranav8722/container-security.git', branch: 'master'
             }
         }
         stage('Build Docker Image') {
             steps {
-                bat "docker build -t ${REGISTRY_URL}/${DOCKER_IMAGE}:latest ."
+                script {
+                    // Build Docker image using the Dockerfile in the images directory
+                    bat 'docker build -t pranav224/container-security-image:latest -f images/Dockerfile .'
+                }
             }
         }
         stage('Scan Docker Image') {
             steps {
-                bat "sh scanners/trivy-scan.sh ${REGISTRY_URL}/${DOCKER_IMAGE}:latest"
+                script {
+                    // Scan the Docker image
+                    bat 'docker scan pranav224/container-security-image:latest'
+                }
             }
         }
         stage('Push Docker Image') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'docker-hub', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                script {
+                    // Log in to Docker Hub and push the Docker image
                     bat '''
-                    echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-                    docker push ${REGISTRY_URL}/${DOCKER_IMAGE}:latest
+                    echo %DOCKER_HUB_PASSWORD% | docker login -u %DOCKER_HUB_USERNAME% --password-stdin
+                    docker push pranav224/container-security-image:latest
                     '''
                 }
             }
         }
         stage('Deploy to Kubernetes') {
             steps {
-                bat 'kubectl apply -f k8s/deployment.yaml'
+                script {
+                    // Deploy to Kubernetes using kubectl
+                    bat 'kubectl apply -f k8s-deployment.yaml'
+                }
             }
         }
     }
     post {
-        success {
-            echo 'Pipeline executed successfully'
+        always {
+            echo 'Pipeline completed.'
         }
         failure {
             echo 'Pipeline failed. Check logs.'
