--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -1,21 +1,22 @@
 pipeline {
     agent any
+    environment {
+        DOCKER_CREDENTIALS = credentials('docker_hub_creds') // Use the ID from the credentials manager
+    }
     stages {
         stage('Checkout') {
             steps {
-                // Clone the repository
-                git url: 'https://github.com/Pranav8722/container-security.git', branch: 'master'
+                git 'https://github.com/Pranav8722/container-security.git'
             }
         }
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Build Docker image using the Dockerfile in the images directory
                     bat 'docker build -t pranav224/container-security-image:latest -f images/Dockerfile .'
                 }
             }
         }
-     stage('Scan Docker Image with Trivy') {
+        stage('Scan Docker Image with Trivy') {
     steps {
         script {
             bat "trivy image pranav224/container-security-image:latest"
@@ -26,29 +27,18 @@ pipeline {
         stage('Push Docker Image') {
             steps {
                 script {
-                    // Log in to Docker Hub and push the Docker image
-                    bat '''
-                    echo %DOCKER_HUB_PASSWORD% | docker login -u %DOCKER_HUB_USERNAME% --password-stdin
-                    docker push pranav224/container-security-image:latest
-                    '''
+                    // Log in to Docker using Jenkins credentials
+                    bat "echo %DOCKER_CREDENTIALS_PSW% | docker login -u %DOCKER_CREDENTIALS_USR% --password-stdin"
+                    bat 'docker push pranav224/container-security-image:latest'
                 }
             }
         }
         stage('Deploy to Kubernetes') {
             steps {
                 script {
-                    // Deploy to Kubernetes using kubectl
-                    bat 'kubectl apply -f k8s-deployment.yaml'
+                    bat 'kubectl apply -f kubernetes/deployment.yaml'
                 }
             }
-        }
-    }
-    post {
-        always {
-            echo 'Pipeline completed.'
-        }
-        failure {
-            echo 'Pipeline failed. Check logs.'
         }
     }
 }
