--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -26,9 +26,10 @@ pipeline {
         stage('Push Docker Image') {
             steps {
                 script {
-                    // Log in to Docker using Jenkins credentials
-                    bat "echo %DOCKER_CREDENTIALS_PSW% | docker login -u %DOCKER_CREDENTIALS_USR% --password-stdin"
-                    bat 'docker push pranav224/container-security-image:latest'
+                    withCredentials([usernamePassword(credentialsId: 'docker_hub_creds', usernameVariable: 'DOCKER_CREDENTIALS_USR', passwordVariable: 'DOCKER_CREDENTIALS_PSW')]) {
+                        bat 'echo %DOCKER_CREDENTIALS_PSW% | docker login -u %DOCKER_CREDENTIALS_USR% --password-stdin'
+                        bat 'docker push pranav224/container-security-image:latest'
+                    }
                 }
             }
         }
