--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -1,8 +1,7 @@
 pipeline {
     agent any
     environment {
-        DOCKER_HUB_USERNAME = 'pranav224'  // Docker Hub Username
-        DOCKER_HUB_ACCESS_TOKEN = credentials('docker_hub_access_token')  // Use the Jenkins credentials ID for the access token
+        DOCKER_CREDENTIALS = credentials('docker_hub_creds') // Use the ID from the credentials manager
     }
     stages {
         stage('Checkout') {
@@ -18,17 +17,18 @@ pipeline {
             }
         }
         stage('Scan Docker Image with Trivy') {
-            steps {
-                script {
-                    bat "trivy image pranav224/container-security-image:latest"
-                }
-            }
+    steps {
+        script {
+            bat "trivy image pranav224/container-security-image:latest"
         }
+    }
+}
+
         stage('Push Docker Image') {
             steps {
                 script {
-                    // Log in to Docker using Jenkins credentials (username and token)
-                    bat "echo %DOCKER_HUB_ACCESS_TOKEN% | docker login -u %DOCKER_HUB_USERNAME% --password-stdin"
+                    // Log in to Docker using Jenkins credentials
+                    bat "echo %DOCKER_CREDENTIALS_PSW% | docker login -u %DOCKER_CREDENTIALS_USR% --password-stdin"
                     bat 'docker push pranav224/container-security-image:latest'
                 }
             }
@@ -39,14 +39,6 @@ pipeline {
                     bat 'kubectl apply -f kubernetes/deployment.yaml'
                 }
             }
-        }
-    }
-    post {
-        success {
-            echo "Pipeline completed successfully."
-        }
-        failure {
-            echo "Pipeline failed. Please check the logs."
         }
     }
 }
