--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -32,7 +32,9 @@ pipeline {
         stage('Deploy to Kubernetes') {
             steps {
                 script {
-                    bat 'kubectl apply -f k8s/deployment.yaml'
+                    // bat 'kubectl apply -f k8s/deployment.yaml'
+                    bat 'kubectl apply -f k8s/deployment.yaml --validate=false'
+
                 }
             }
         }
