--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -41,5 +41,14 @@ pipeline {
                 }
             }
         }
+        
+    post {
+        success {
+            echo "Pipeline completed successfully."
+        }
+        failure {
+            echo "Pipeline failed. Please check the logs."
+        }
+    }
     }
 }
