--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -3,14 +3,12 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                // Clone the repository
                 git 'https://github.com/Pranav8722/container-security.git'
             }
         }
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Build the Docker image
                     bat 'docker build -t pranav224/container-security-image:latest -f images/Dockerfile .'
                 }
             }
@@ -18,7 +16,6 @@ pipeline {
         stage('Scan Docker Image with Trivy') {
             steps {
                 script {
-                    // Scan the Docker image for vulnerabilities
                     bat 'trivy image pranav224/container-security-image:latest'
                 }
             }
@@ -26,23 +23,30 @@ pipeline {
         stage('Push Docker Image') {
             steps {
                 script {
-                    // Docker login using a direct token
+                    // Directly provide the token for Docker login
                     bat 'echo dckr_pat_EDzEoL3X8MIugIjpk20T364-1ks | docker login -u pranav224 --password-stdin'
-                    // Push the image to Docker Hub
                     bat 'docker push pranav224/container-security-image:latest'
                 }
             }
         }
-        stage('Deploy to Kubernetes') {
-            steps {
-                script {
-                    // Apply the Kubernetes deployment and service YAML
-                    bat 'kubectl --kubeconfig="C:\\Users\\prana\\.kube\\config" apply -f k8s/deployment.yaml --validate=false'
-                }
-            }
+     stage('Deploy to Kubernetes') {
+    steps {
+        script {
+            // bat 'kubectl apply -f k8s/deployment.yaml'
+            bat 'kubectl apply -f k8s/deployment.yaml --validate=false'
+
         }
-        
-  
-        
+    }
+}
+
+    post {
+        success {
+            echo "Pipeline completed successfully."
+        }
+        failure {
+            echo "Pipeline failed. Please check the logs."
+        }
+    }
+
     }
 }
