--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -1,6 +1,5 @@
 pipeline {
     agent any
-
     stages {
         stage('Checkout') {
             steps {
@@ -24,6 +23,7 @@ pipeline {
         stage('Push Docker Image') {
             steps {
                 script {
+                    // Directly provide the token for Docker login
                     bat 'echo dckr_pat_EDzEoL3X8MIugIjpk20T364-1ks | docker login -u pranav224 --password-stdin'
                     bat 'docker push pranav224/container-security-image:latest'
                 }
@@ -37,23 +37,15 @@ pipeline {
             }
         }
     }
-
+    // Optional: Remove or comment out the 'post' section if you no longer need email notifications
+    
     post {
-        always {
-            echo 'Performing cleanup...'
-            deleteDir() // Clean up workspace
-        }
         success {
-            echo 'Pipeline succeeded!'
-            mail to: 'team@example.com',
-                 subject: 'Pipeline Success',
-                 body: 'The Jenkins pipeline completed successfully!'
+            echo 'Pipeline completed successfully!'
         }
         failure {
-            echo 'Pipeline failed!'
-            mail to: 'team@example.com',
-                 subject: 'Pipeline Failure',
-                 body: 'The Jenkins pipeline failed. Check the logs for details.'
+            echo 'Pipeline failed. Please check the logs.'
         }
     }
+    
 }
