--- a/ci-cd/Jenkinsfile
+++ b/ci-cd/Jenkinsfile
@@ -17,7 +17,8 @@ pipeline {
         stage('Scan Docker Image with Trivy') {
             steps {
                 script {
-                    bat 'C:\\Jenkins\\scanners\\trivy-scan.bat pranav224/container-security-image:latest'
+                    bat 'C:\Users\prana\container-security\scanners\trivy-scan.bat pranav224/container-security-image:latest'
+                    
                 }
             }
         }
